fixed scrollbar appearing issue

--- a/src/styles/sass/ContactsPage.scss
+++ b/src/styles/sass/ContactsPage.scss
@@ -1,7 +1,7 @@
 @import "./shared.scss";
 
 .contacts-page {
-  height: 100vh;
+  height: 95vh;
   color: #fff;
   padding: 60px 0;
   position: relative;
@@ -49,6 +49,7 @@
             overflow: hidden;
             box-shadow: 1px 1px 15px 0 rgba(180, 0, 255, 0.5);
             position: relative;
+            transform: translateX(0);
             transition: all .3s;
             &::before {
               content: "";
@@ -79,10 +80,7 @@
               transition: all .3s ease-in-out 0s;
             }
             &:hover {
-              // &::before {
-              //   width: 0;
-              //   height: 0;
-              // }
+              transform: translateY(-5px);
               box-shadow: 1px 2px 10px 2px rgba(180, 0, 255, 0.5);
               &::after {
                 width: 100%;
@@ -96,7 +94,10 @@
             }
             img {
               vertical-align: middle;
-              z-index: 2;
+              width: 20px;
+              @include goingLarge(800) {
+                width: 40px;
+              }
             }
           }
         }
